
- pts-core: Separate out WebSocket server back-ends
- phoromatic: Honor show_local_tests_only option via the build suite page
- phoromatic: Fix jumping on page on checkbox selection when scrolling
- phoromatic: Don't print network connectivity messages
- phoromatic: Set Phoromatic System Variables set by server on Phoromatic clients as env vars
- phoromatic: Lots of early Web Sockets work

Phoronix Test Suite 5.8 Milestone 2
21 April 2015

- pts-core: Fix potential crash in list-installed-suites sub-command
- pts-core: Enforce CCACHE_DISABLE=1 during install/runtime testing
- pts-core: Finish removal of hhvm-server support since it's long been discontinued upstream
- pts-core: Add pts-core/hooks/startup
- phodevi: Reporting of Btrfs RAID levels to system component table when running disk tests
- phoromatic: Workaround for instr() usage in SQLite that caused issues with older distributions
- phoromatic: Add LetPublicViewResults option and new public results listing page
- phoromatic: Update results selection on rootadmin data page
- phoromatic: Start work on nginx server configuration (not yet working)
- phoromatic: Add "System Targets" info to benchmark ticket page & "View All Past Tickets"

Phoronix Test Suite 5.8 Milestone 1
2 April 2015

- pts-core: Start moving possible deployment scripts into deploy/ directory
- pts-core: Move phoromatic-client and phoromatic-server Upstart job files to deploy/
- pts-core: Move phoromatic-client and phoromatic-server systemd service files to deploy/
- pts-core: Add very basic result-file-to-json sub-command
- pts-core: Drop AnonymousHardwareReporting / AnonymousSoftwareReporting as no longer used on OpenBenchmarking.org
- Pull in JuJu scripts from https://github.com/juju-solutions/pts to deploy/juju
- phodevi: More allowance for clients to recover Internet connection / server communication failure
- phoromatic: Clean-up main page schedule for schedules with no associated systems